Wed May 26 14:15:33 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/SimpleProcessColocation_Default.cdp:
        * DAnCE/tests/CIAO/NodeManager-Deployments/SimpleProcessColocation_Default.cdp:

         Removed the deault locality test, as we no longer support the former behavior,
         that is, if instances are not explicitly included as part of a locality group,
         they will no longer be considered as part of a seperate locality.

Wed May 26 13:38:49 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Containers/Container_Base.idl:
        * ciao/Containers/Session/Session_Container.h:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Deployment/Handlers/Home_Handler.cpp:

         Enabled home attribute configuration.

Wed May 26 13:25:01 UTC 2010  Marijke Hengstmengel <m.hengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/Hello.idl
        * connectors/ami4ccm/tests/InterMulti
        * connectors/ami4ccm/tests/InterMulti/Base
        * connectors/ami4ccm/tests/InterMulti/Base/InterMulti.idl
        * connectors/ami4ccm/tests/InterMulti/Base/InterMulti.mpc
        * connectors/ami4ccm/tests/InterMulti/descriptors
        * connectors/ami4ccm/tests/InterMulti/Receiver
        * connectors/ami4ccm/tests/InterMulti/Receiver/InterMulti_Receiver.idl
        * connectors/ami4ccm/tests/InterMulti/Receiver/InterMulti_Receiver.mpc
        * connectors/ami4ccm/tests/InterMulti/Receiver/InterMulti_Receiver_exec.cpp
        * connectors/ami4ccm/tests/InterMulti/Receiver/InterMulti_Receiver_exec.h
        * connectors/ami4ccm/tests/InterMulti/Sender
        * connectors/ami4ccm/tests/InterMulti/Sender/InterMulti_Sender.idl
        * connectors/ami4ccm/tests/InterMulti/Sender/InterMulti_Sender.mpc
        * connectors/ami4ccm/tests/InterMulti/Sender/InterMulti_Sender_exec.cpp